--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.0+'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'joda-time:joda-time:2.3'
 }
